--- a/index.html
+++ b/index.html
@@ -1,76 +1,74 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <link rel="stylesheet" href="includes/css/main2.css" />
-  <style>
-    /* Animation Styles */
-    h1, p {
-      color: #000000; /* Set the desired font color */
-    }
-
-    .fade-in {
-      animation: fade-in 1s ease-in-out;
-    }
-
-    @keyframes fade-in {
-      0% {
-        opacity: 0;
-      }
-      100% {
-        opacity: 1;
-      }
-    }
-
-    .slide-up {
-      transition: transform 1.5s ease-in-out;
-    }
-
-    .slide-up:hover {
-      transform: translateY(-10px);
-    }
-
-    /* Image Styles */
-    img {
-      width: 100px; /* Adjust the width as needed */
-      height: auto;
-    }
-
-    /* Highlight Styles */
-    h2 {
-      background-color: #e9e9e9; /* Set the desired background color */
-      padding: 5px 10px; /* Adjust the padding as needed */
-      display: inline-block;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Photographer & Editor Portfolio</title>
 </head>
 <body>
-  
-  <div>
-    <h2 class="slide-up">Meet on Instagram (14/12/2020)</h2>
-    <p class="fade-in">
-      We first connected on Instagram on December 14, 2020. It all started with a simple message, and little did we know that it would be the beginning of a beautiful journey.
-    </p>
-    <img src="alexander-shatov-71Qk8ODIBko-unsplash.jpg" alt="Meet on Instagram">
-  </div>
-  
-  <div>
-    <h2 class="slide-up">Proposal (19/12/2020)</h2>
-    <p class="fade-in">
-      Just five days after our first interaction, I couldn't wait any longer and decided to propose to her on December 19, 2020. It was a nerve-wracking moment, but I gathered all my courage and expressed my feelings for her.
-    </p>
-    <img src="istockphoto-1349234348-170667a.jpg" alt="Proposal">
-  </div>
-  
-  <div>
-    <h2 class="slide-up">She said yes! (24/12/2020)</h2>
-    <p class="fade-in">
-      On December 24, 2020, she gave me the best gift I could ever ask for — her acceptance. She agreed to be my wife, and my heart was filled with joy and gratitude. It marked the beginning of a new chapter in our lives together.
-    </p>
-    <img src="il_fullxfull.2553153478_709z.jpg" alt="She said yes!">
-  </div>
-  
-  <footer class="fade-in">
-    <<a href="webpage.html" class="start-journey-button">Click For Proposal </a>
-  </footer>
+    <header>
+        <h1>Photographer & Editor</h1>
+        <br>
+        <h1>Ahmed Javed</h1>
+    </header>
+    
+    <nav>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#portfolio">work</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#tools">Tools</a></li>
+        </ul>
+    </nav>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Hello, I'm Ahmed Javed, a passionate individual dedicated to the world of creativity and technology. Currently, I am a student pursuing a Bachelor's degree in Computer Science at Capital University. My journey in the field of Computer Science has been enriched by my deep-rooted interest in multimedia production and editing.</p>
+    </section>
+
+    <section id="portfolio">
+        <h2>WORK</h2>
+        <div class="Sample">
+            <div class="project-image">
+               
+            </div>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+            <div class="project-description">
+                <h2>Description of project </h2>
+                <p>This image represents the creative prowess of the artist and their commitment to ethical image manipulation. It stands as a shining example of how artistic innovation can thrive within the bounds of copyright regulations, inspiring creativity while respecting intellectual property rights.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="experience">
+        <h2>Experience</h2>
+        <p>In my journey as a photo editor, I have had the privilege of collaborating with a diverse range of individuals, each with their unique stories and creative visions. My experience has been a testament to the power of visual storytelling and the transformative role of image enhancement.</p>
+    </section>
+
+    <section id="tools">
+        <h2>Tools</h2>
+		<br>
+		  <ul>
+        <li>Premium Pro</li>
+        <li>Canva</li>
+        <li>Photoshop</li>
+        <li>Adobe illustrator</li>
+    </ul>
+    </section>
+	    <section id="contact">
+        <h2>Contact</h2>
+		<br>
+        <p>Phone No :+92 320 4746700</p>
+		<p>Email :ahmad.javed.35432@gmail.com</p>
+    </section>
+
 </body>
 </html>
