--- a/index.html
+++ b/index.html
@@ -29,24 +29,15 @@
     </section>
 
     <section id="portfolio">
-        <h2>WORK</h2>
-        <div class="Sample">
-            <div class="project-image">
-               
-            </div>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-            <div class="project-description">
-                <h2>Description of project </h2>
-                <p>This image represents the creative prowess of the artist and their commitment to ethical image manipulation. It stands as a shining example of how artistic innovation can thrive within the bounds of copyright regulations, inspiring creativity while respecting intellectual property rights.</p>
-            </div>
-        </div>
-    </section>
+        <h2>Skills</h2>
+		<br>
+		<u1>
+		<li>Advanced proficiency in Adobe Photoshop and Lightroom</li>
+		<li>Color Grading & Mixing</li>
+        <li>Strong photo editing skills, including color correction, retouching, and compositing</li>
+        <li>Ability to work independently and as part of a team</li>
+    </ul>
+  </section>
 
     <section id="experience">
         <h2>Experience</h2>
