--- a/index.html
+++ b/index.html
@@ -3,63 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Photographer & Editor Portfolio</title>
+    <title>Happy Birthday!</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-image: url('https://www.wallpaperflare.com/static/752/994/485/wall-e-happy-birthday-candle-lights-4k-wallpaper.jpg');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            color: white;
+        }
+        h1 {
+            color: #FF69B4;
+        }
+        .content {
+            background-color: rgba(0, 0, 0, 0.6);
+            padding: 20px;
+            border-radius: 10px;
+        }
+        img {
+            max-width: 80%;
+            height: auto;
+            margin: 20px 0;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Photographer & Editor</h1>
-        <br>
-        <h1>Ahmed Javed</h1>
-    </header>
-    
-    <nav>
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#portfolio">work</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#tools">Tools</a></li>
-        </ul>
-    </nav>
-
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Hello, I'm Ahmed Javed, a passionate individual dedicated to the world of creativity and technology. Currently, I am a student pursuing a Bachelor's degree in Computer Science at Capital University. My journey in the field of Computer Science has been enriched by my deep-rooted interest in multimedia production and editing.</p>
-    </section>
-
-    <section id="portfolio">
-        <h2>Skills</h2>
-		<br>
-		<u1>
-		<li>Advanced proficiency in Adobe Photoshop and Lightroom</li>
-		<li>Color Grading & Mixing</li>
-        <li>Strong photo editing skills, including color correction, retouching, and compositing</li>
-        <li>Ability to work independently and as part of a team</li>
-    </ul>
-  </section>
-
-    <section id="experience">
-        <h2>Experience</h2>
-        <p>In my journey as a photo editor, I have had the privilege of collaborating with a diverse range of individuals, each with their unique stories and creative visions. My experience has been a testament to the power of visual storytelling and the transformative role of image enhancement.</p>
-    </section>
-
-    <section id="tools">
-        <h2>Tools</h2>
-		<br>
-		  <ul>
-        <li>Premium Pro</li>
-        <li>Canva</li>
-        <li>Photoshop</li>
-        <li>Adobe illustrator</li>
-    </ul>
-    </section>
-	    <section id="contact">
-        <h2>Contact</h2>
-		<br>
-        <p>Phone No :+92 320 4746700</p>
-		<p>Email :ahmad.javed.35432@gmail.com</p>
-    </section>
-
+    <div class="content">
+        <h1>Happy Birthday!</h1>
+        <p>Wishing a very happy birthday to Alishba!</p>
+        <p>Alishba, you're incredibly special, and I wanted to take this moment to let you know how much you mean to me. Your beauty, both inside and out, brightens up every moment. I love you for who you are, and I'm grateful for your presence in my life.</p>
+        <p>May your day be as wonderful as you are!</p>
+        <p>Here's to celebrating many more birthdays together!</p>
+    </div>
 </body>
 </html>
+
